--- a/SAMPLE-2/src/style/styles.css
+++ b/SAMPLE-2/src/style/styles.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import "./reset.css";
+@import "./menuBar.css";
 
 body {
   width: 100%;
@@ -53,19 +54,6 @@ body {
   margin-top: 100px;
 }
 
-.ma1__menu {
-  margin: 10px 0px;
-  width: 60%;
-  height: 50px;
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  color: #fff;
-  font-size: 12px;
-}
-
 @media (max-width: 425px) {
   .mainArea {
     flex-direction: column;
@@ -96,5 +84,11 @@ body {
     font-weight: 600;
     font-size: 11px;
     margin-top: 20px;
+  }
+
+  .ma1__menu {
+    position: absolute;
+    margin-right: 20px;
+    right: 0;
   }
 }
