--- a/SAMPLE-3/src/style/main.css
+++ b/SAMPLE-3/src/style/main.css
@@ -1,3 +1,10 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .main__seper {
   margin: 20px 0px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
@@ -30,6 +37,29 @@
   color: rgba(0, 0, 0, 0.4);
 }
 
-.md__col2 span {
-  margin: 0px 5px;
+.md__col2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.md__col2 .md__col2__icon {
+  margin: 5px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.md__col2 .md__col2__icon:nth-child(1) {
+  background-image: url("../assets/images/icons/facebook.png");
+  background-size: cover;
+}
+
+.md__col2 .md__col2__icon:nth-child(2) {
+  background-image: url("../assets/images/icons/instagram.png");
+  background-size: cover;
+}
+
+.md__col2 .md__col2__icon:nth-child(3) {
+  background-image: url("../assets/images/icons/twitter.png");
+  background-size: cover;
 }
